@@ -1,3 +1,8 @@
+2007-04-26  Ian Lance Taylor  <iant@google.com>
+
+	PR target/28675
+	* gcc.c-torture/compile/pr28675.c: New test.
+
 2007-04-26  Andrew Pinski  <andrew_pinski@playstation.sony.com>
 
 	PR C++/30016
